[gd_scene load_steps=11 format=3 uid="uid://c3nfa6rei6g6q"]

[ext_resource type="PackedScene" uid="uid://b1gesq5eqt4gb" path="res://ui/health_bar.tscn" id="1_0jnm8"]
[ext_resource type="Script" uid="uid://dsiponmysiscm" path="res://script/hud/main_hud.gd" id="1_5wr25"]
[ext_resource type="FontFile" uid="uid://7u5pmtqh8ytc" path="res://assets/fonts/Pixellari.ttf" id="1_ctnlf"]
[ext_resource type="Texture2D" uid="uid://mb2dmrorcyul" path="res://assets/textures/skill/Sci-Fi Game Icons/Hex/slice43.png" id="1_uhoqa"]
[ext_resource type="Texture2D" uid="uid://muv1qq22kvlw" path="res://assets/textures/skill/Sci-Fi Game Icons/Hex/Plate.svg" id="3_5wr25"]
[ext_resource type="PackedScene" uid="uid://bciv872vg5pjg" path="res://ui/pausemenu.tscn" id="3_w6ydn"]
[ext_resource type="PackedScene" uid="uid://cm7ckp24e0dph" path="res://entities/player/skill_button.tscn" id="4_w6ydn"]
[ext_resource type="Texture2D" uid="uid://de3r2kaib44xb" path="res://assets/textures/skill/Sci-Fi Game Icons/Hex/slice28.png" id="6_tpnwc"]
[ext_resource type="PackedScene" uid="uid://5xl83ut3h8mr" path="res://ui/Enemy_health_bar.tscn" id="7_e6gl8"]
[ext_resource type="AudioStream" uid="uid://dfow5gigdhw45" path="res://assets/audio/SFX/Victory.mp3" id="9_tpnwc"]

[node name="MainHUD" type="CanvasLayer"]
script = ExtResource("1_5wr25")

[node name="TopRightUI" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -74.0
offset_bottom = 71.0
grow_horizontal = 0

[node name="PauseButton" type="TextureButton" parent="TopRightUI"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture_normal = ExtResource("1_uhoqa")
ignore_texture_size = true
stretch_mode = 5

[node name="Pausemenu" parent="TopRightUI/PauseButton" instance=ExtResource("3_w6ydn")]

[node name="BottomLeftUI" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -173.0
offset_right = 294.0
grow_vertical = 0
theme_override_constants/margin_top = 96

[node name="VBoxContainer" type="VBoxContainer" parent="BottomLeftUI"]
layout_mode = 2

[node name="SkillsContainer" type="HBoxContainer" parent="BottomLeftUI/VBoxContainer"]
layout_mode = 2

[node name="Skill1Button" parent="BottomLeftUI/VBoxContainer/SkillsContainer" instance=ExtResource("4_w6ydn")]
layout_mode = 2

[node name="Skill2Button" parent="BottomLeftUI/VBoxContainer/SkillsContainer" instance=ExtResource("4_w6ydn")]
layout_mode = 2
texture_normal = ExtResource("3_5wr25")

[node name="Skill3Button" parent="BottomLeftUI/VBoxContainer/SkillsContainer" instance=ExtResource("4_w6ydn")]
layout_mode = 2
texture_normal = ExtResource("6_tpnwc")

[node name="PlayerHealthBar" parent="BottomLeftUI/VBoxContainer" instance=ExtResource("1_0jnm8")]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="TopUI" type="MarginContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.0
offset_right = 67.0
offset_bottom = 40.0
grow_horizontal = 2
scale = Vector2(2, 2)

[node name="HBoxContainer" type="VBoxContainer" parent="TopUI"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="TopUI/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ctnlf")
text = "SCORE:"

[node name="Spacer" type="Control" parent="TopUI/HBoxContainer"]
layout_mode = 2

[node name="HighScoreLabel" type="Label" parent="TopUI/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ctnlf")
text = "HIGHSCORE: "
vertical_alignment = 3

[node name="GameOverOverlay" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -136.0
offset_right = 145.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverOverlay"]
layout_mode = 2
offset_right = 290.0
offset_bottom = 150.0

[node name="GameOverLabel" type="Label" parent="GameOverOverlay/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ctnlf")
text = "GAME OVER"
horizontal_alignment = 1

[node name="Control" type="Control" parent="GameOverOverlay/VBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="GameOverOverlay/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ctnlf")
text = "SCORE:"
horizontal_alignment = 1

[node name="HighscoreLabel" type="Label" parent="GameOverOverlay/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ctnlf")
text = "HIGHSCORE:"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="GameOverOverlay/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ctnlf")
text = "RETRY"

[node name="MainMenuButton" type="Button" parent="GameOverOverlay/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ctnlf")
text = "MAIN MENU"

[node name="VictoryOverlay" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -136.0
offset_right = 145.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VictoryOverlay"]
layout_mode = 2
offset_right = 290.0
offset_bottom = 150.0

[node name="GameOverLabel" type="Label" parent="VictoryOverlay/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ctnlf")
theme_override_font_sizes/font_size = 64
text = "VICTORY"
horizontal_alignment = 1

[node name="SfxVictory" type="AudioStreamPlayer2D" parent="VictoryOverlay"]
stream = ExtResource("9_tpnwc")
volume_db = 3.0

[node name="BossUI" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_top = 0.805
anchor_right = 1.0
anchor_bottom = 0.85
offset_left = 85.0
offset_top = 0.199951
offset_right = -69.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BossUI"]
layout_mode = 2

[node name="BossNameLabel" type="Label" parent="BossUI/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ctnlf")
theme_override_font_sizes/font_size = 25
text = "GARGANTUA"
horizontal_alignment = 1

[node name="BossHealthBar" parent="BossUI/VBoxContainer" instance=ExtResource("7_e6gl8")]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="FadeOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)
